share-img updated

--- a/_posts/2020-07-29-p3.md
+++ b/_posts/2020-07-29-p3.md
@@ -2,8 +2,8 @@
 layout: post
 title: My Journey On Becoming A Google Developer Student Club (DSC) Lead
 tags: [Google, Developer Student Club, DSC]
-image: https://www.anudit.in/assets/img/dsc_lead/dsc_logo.png
-share-img: https://www.anudit.in/assets/img/dsc_lead/dsc_logo.png
+image: /assets/img/l2.png
+share-img: /assets/img/l2.png
 ---
 
 <center><h3>What is Google Developer Student Club (DSC)?</h3></center>
