--- a/_posts/2020-07-28-p1.md
+++ b/_posts/2020-07-28-p1.md
@@ -2,6 +2,8 @@
 layout: page
 title: "Light: Particle or Wave?"
 tags: [random, exciting-stuff]
+image: /assets/img/l3.png
+share-img: /assets/img/l3.png
 cover-img:
   - "/assets/img/av.jpg"
 ---
